--- a/config/database.yml
+++ b/config/database.yml
@@ -1,5 +1,11 @@
+# SQLite version 3.x
+#   gem install sqlite3
+#
+#   Ensure the SQLite 3 gem is defined in your Gemfile
+#   gem 'sqlite3'
+#
 default: &default
-  adapter: postgresql
+  adapter: sqlite3
   pool: 5
   timeout: 5000
 
@@ -16,4 +22,4 @@ test:
 
 production:
   <<: *default
-  database: my_database_production
+  database: db/production.sqlite3
